--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://rafaelcacilhas.github.io/",
-  "name": "portfolio_github",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
